<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".NoGemCal">

    <EditText
        android:id="@+id/Entermaterial1"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_edittext_background"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/gold_silver"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Enterprice1"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext_background"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/per_gram"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Entermaterial1" />

    <EditText
        android:id="@+id/Enterweight1"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext_background"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/grams"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purity" />

    <EditText
        android:id="@+id/Enterhours1"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext_background"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/amount"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Enterweight1" />

    <EditText
        android:id="@+id/Enteroverhead1"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext_background"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/_10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/laborhours" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="#F1D166"
        android:fontFamily="sans-serif-medium"
        android:text="@string/calculate"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Enteroverhead1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:background="#000000"
        android:fontFamily="sans-serif-light"
        android:gravity="center|left"
        android:text="@string/enter_material"
        android:textColor="#F1D166"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:fontFamily="sans-serif-light"
        android:gravity="center|left"
        android:text="@string/enter_price"
        android:textColor="#F1D166"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:fontFamily="sans-serif-light"
        android:gravity="center|left"
        android:text="@string/enter_weight"
        android:textColor="#F1D166"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:fontFamily="sans-serif-light"
        android:gravity="center|left"
        android:text="@string/enter_labor_cost"
        android:textColor="#F1D166"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:fontFamily="sans-serif-light"
        android:gravity="center|left"
        android:text="@string/enter_overhead"
        android:textColor="#F1D166"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/Nogemhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:fontFamily="cursive"
        android:text="@string/no_stone"
        android:textColor="#F1D166"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:fontFamily="sans-serif-light"
        android:gravity="center|left"
        android:text="@string/enter_labor_hours"
        android:textColor="#F1D166"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/laborhours"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext_background"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/hours"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Enterhours1" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:fontFamily="sans-serif-light"
        android:gravity="center|left"
        android:text="@string/enter_purity"
        android:textColor="#F1D166"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/purity"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext_background"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/_100_1"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Enterprice1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="81dp"
        android:layout_height="62dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017"
        app:srcCompat="@drawable/gemtable" />

</androidx.constraintlayout.widget.ConstraintLayout>